<resources>
    <string name="app_name">hello glass</string>
    <string name="login">Login</string>
    <string name="logining">登录中</string>
    <string name="logout">退出登录</string>

    <string name="signup">Sign Up</string>
    <string name="signuping">注册中</string>
    <string name="password">Password</string>
    <string name="repasswd">Repeat Password</string>
    <string name="id">User ID</string>
    <string name="phone">User Phone</string>
    <string name="name">User Name</string>


    <string name="title_push">Push</string>
    <string name="title_people">People</string>
    <string name="title_setting">Setting</string>

    <string name="card_name">姓名 ：</string>
    <string name="card_branch">部门 ：</string>
    <string name="card_phone">手机 ：</string>
    <string name="card_no">工号 ：</string>

    <string name="search">搜索</string>
    <string name="save">保存</string>
    <string name="next">下一步</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>


    <string name="push">推送</string>
    <string name="people">人员</string>
    <string name="setting">设置</string>


    <string name="more">更多</string>
    <string name="detail">点击查看详情</string>
    <string name="up_sync_push">同步推送</string>
    <string name="down_sync_push">更新推送</string>


    <string name="set_info">信息设置</string>
    <string name="update_info">信息更新</string>
    <string name="set_push">推送设置</string>
    <string name="set_system">系统设置</string>
    <string name="app_about">关于应用</string>
    <string name="check_update">检查更新</string>
    <string name="callback">反馈</string>


    <string name="use_pic">相片</string>
    <string name="take_pic">拍照</string>
    <string name="choose_pic">从相册选择</string>
    <string name="view_pic">查看大图</string>
    <string name="use_name">姓名</string>
    <string name="use_branch">部门</string>
    <string name="use_no">工号</string>
    <string name="info_section_1">以下信息除相片外不可修改</string>
    <string name="use_phone">手机</string>
    <string name="use_passwd">修改密码</string>
    <string name="info_section_2">以下信息设置关联到账号</string>
    <string name="old_phone">输入旧手机号</string>
    <string name="get_code">获取验证码</string>
    <string name="new_phone">输入新手机号</string>
    <string name="validate_code">输入验证码</string>
    <string name="old_password">输入旧密码</string>
    <string name="new_password">输入新密码</string>


    <string name="push_switch">开启推送通知</string>
    <string name="push_section_1">设置此项保证推送能及时推送到您</string>
    <string name="push_voice">声音</string>
    <string name="push_vibrate">震动</string>
    <string name="push_float">悬浮窗</string>
    <string name="push_cycle">推送周期</string>
    <string name="push_date">推送日期</string>
    <string name="push_time">推送时间</string>

    <string name="system_language">多语言</string>
    <string name="system_theme">颜色主题</string>
    <string name="system_font_size">字体大小</string>
    <string name="system_sync_data">同步数据</string>
    <string name="system_clean_data">清理缓存</string>


</resources>
