<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/user_idcard"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_user_idcard">

        <com.qmuiteam.qmui.widget.QMUIRadiusImageView
            android:id="@+id/user_pic"
            android:layout_width="75dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:src="@mipmap/user_pic_blue"
            app:qmui_corner_radius="2dp"
            app:qmui_is_circle="false"
            app:qmui_is_oval="false" />

        <TextView
            android:id="@+id/card_name"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/card_name" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignTop="@id/card_name"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/card_name"
            android:text="user_name" />


        <TextView
            android:id="@+id/card_phone"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@id/card_name"
            android:layout_alignStart="@id/card_name"
            android:layout_marginTop="15dp"
            android:text="@string/card_phone" />

        <TextView
            android:id="@+id/user_phone"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignStart="@id/user_name"
            android:layout_alignTop="@id/card_phone"
            android:layout_toEndOf="@id/card_phone"
            android:text="user_phone" />

        <TextView
            android:id="@+id/card_branch"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@id/card_phone"
            android:layout_alignStart="@id/card_name"
            android:layout_marginTop="15dp"
            android:text="@string/card_branch" />

        <TextView
            android:id="@+id/user_branch"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignStart="@id/user_name"
            android:layout_alignTop="@id/card_branch"
            android:layout_toEndOf="@id/card_branch"
            android:text="user_branch" />


        <TextView
            android:id="@+id/card_no"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@id/card_branch"
            android:layout_alignStart="@id/card_name"
            android:layout_marginTop="15dp"
            android:text="@string/card_no" />

        <TextView
            android:id="@+id/user_no"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignStart="@id/user_name"
            android:layout_alignTop="@id/card_no"
            android:layout_toEndOf="@id/card_no"
            android:text="user_no" />

    </RelativeLayout>

</android.support.v7.widget.CardView>

