<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_colorPrimaryDark"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:id="@+id/edit_layout"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="120dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/input_user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/id"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:padding="5dp"
                    android:textColor="@color/material_colorText_Icon"
                    android:textColorHint="@color/material_colorText_Icon" />

                <ImageView
                    android:id="@+id/user_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_account" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/input_passwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="6"
                    android:padding="5dp"
                    android:textColor="@color/material_colorText_Icon"
                    android:textColorHint="@color/material_colorText_Icon" />

                <ImageView
                    android:id="@+id/passwd_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_visibility_off" />
            </RelativeLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="120dp">

            <View
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/round_rect_green">

            </View>

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_unlock" />

        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/edit_layout"
        android:layout_alignStart="@id/edit_layout"
        android:layout_margin="5dp"
        android:text="@string/login"
        android:textColor="@color/material_colorPrimaryText"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/edit_layout"
        android:layout_alignEnd="@id/edit_layout"
        android:layout_margin="5dp"
        android:text="@string/signup"
        android:textColor="@color/material_colorPrimaryText"
        android:textSize="22dp" />

</RelativeLayout>