<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGray">

    <LinearLayout
        android:id="@+id/edit_layout"
        android:layout_width="300dp"
        android:layout_height="240dp"
        android:layout_centerInParent="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="8"
                android:padding="5dp"
                android:textColor="@color/editWhite"
                android:textColorHint="@color/editWhite" />

            <ImageView
                android:id="@+id/name_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@mipmap/user_white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="11"
                android:padding="5dp"
                android:textColor="@color/editWhite"
                android:textColorHint="@color/editWhite" />

            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@mipmap/phone_white" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="60dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/new_passwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/passwd"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="6"
                android:padding="5dp"
                android:textColor="@color/editWhite"
                android:textColorHint="@color/editWhite" />

            <ImageView
                android:id="@+id/nepasswd_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@mipmap/lock" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="60dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/repeat_passwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/repasswd"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="6"
                android:padding="5dp"
                android:textColor="@color/editWhite"
                android:textColorHint="@color/editWhite" />

            <ImageView
                android:id="@+id/repasswd_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@mipmap/lock" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="60dp"
        android:layout_height="120dp"
        android:layout_alignEnd="@id/edit_layout"
        android:layout_alignBottom="@id/edit_layout">

        <View
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/round_rect_red">

        </View>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/pencil" />

    </RelativeLayout>


    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/edit_layout"
        android:layout_alignEnd="@id/edit_layout"
        android:layout_margin="5dp"
        android:text="@string/login"
        android:textColor="@color/textGray"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/edit_layout"
        android:layout_alignStart="@id/edit_layout"
        android:layout_margin="5dp"
        android:text="@string/signup"
        android:textColor="@color/textGray"
        android:textSize="22dp" />
</RelativeLayout>